--- a/app/static/admin.html
+++ b/app/static/admin.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Admin Dashboard</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
@@ -11,14 +10,14 @@
   <div class="max-w-7xl mx-auto p-6">
     <h1 class="text-3xl font-bold mb-4">🛠️ Admin Dashboard</h1>
 
-    <!-- Tab Navigation -->
+    <!-- Tabs -->
     <div class="flex space-x-4 mb-6">
       <button onclick="showTab('statsSection')" class="tab-btn bg-blue-100 px-4 py-2 rounded">📊 Stats</button>
       <button onclick="showTab('unverifiedSection')" class="tab-btn bg-blue-100 px-4 py-2 rounded">🧍 Unverified</button>
       <button onclick="showTab('reportSection')" class="tab-btn bg-blue-100 px-4 py-2 rounded">🚨 Reports</button>
     </div>
 
-    <!-- Dashboard Stats -->
+    <!-- Stats Section -->
     <section id="statsSection" class="mb-8 hidden">
       <h2 class="text-2xl font-semibold mb-2">📊 Statistics</h2>
       <ul id="statsList" class="grid grid-cols-2 md:grid-cols-3 gap-4 bg-white p-4 rounded shadow"></ul>
@@ -35,12 +34,22 @@
       </table>
     </section>
 
-    <!-- Reports -->
+    <!-- Reported Users -->
     <section id="reportSection" class="mb-8 hidden">
       <h2 class="text-2xl font-semibold mb-2">🚨 Reported Users</h2>
       <table class="min-w-full bg-white rounded shadow text-sm">
-        <thead class="bg-gray-200">
-          <tr><th class="p-2 text-left">User</th><th class="p-2">Reported By</th><th class="p-2">Reason</th><th class="p-2">Time</th><th class="p-2">Action</th></tr>
+        <thead class="bg-gray-200 text-xs">
+          <tr>
+            <th class="p-2">Report ID</th>
+            <th class="p-2">User</th>
+            <th class="p-2">Reported By</th>
+            <th class="p-2">Reason</th>
+            <th class="p-2">Status</th>
+            <th class="p-2">Action Taken</th>
+            <th class="p-2">Reviewed By</th>
+            <th class="p-2">Reviewed At</th>
+            <th class="p-2">Actions</th>
+          </tr>
         </thead>
         <tbody id="reportTable"></tbody>
       </table>
@@ -59,9 +68,7 @@
 
     function showTab(sectionId) {
       const sections = ["statsSection", "unverifiedSection", "reportSection"];
-      sections.forEach(id => {
-        document.getElementById(id).classList.add("hidden");
-      });
+      sections.forEach(id => document.getElementById(id).classList.add("hidden"));
       document.getElementById(sectionId).classList.remove("hidden");
     }
 
@@ -80,7 +87,7 @@
         for (const [key, value] of Object.entries(data)) {
           statsList.innerHTML += `<li class="border p-2 rounded bg-gray-50"><strong>${key.replace(/_/g, ' ')}:</strong> ${value}</li>`;
         }
-      } catch (error) {
+      } catch {
         alert("Failed to load stats.");
       }
     }
@@ -101,7 +108,7 @@
               </td>
             </tr>`;
         });
-      } catch (error) {
+      } catch {
         alert("Failed to load unverified users.");
       }
     }
@@ -121,6 +128,7 @@
         headers: apiHeaders()
       });
       loadUnverified();
+      loadReports();
       alert("User banned.");
     }
 
@@ -130,19 +138,23 @@
         const reports = await res.json();
         const table = document.getElementById("reportTable");
         table.innerHTML = "";
-        reports.forEach(report => {
+        reports.forEach(r => {
           table.innerHTML += `
             <tr class="border-t">
-              <td class="p-2">${report.user_id}</td>
-              <td class="p-2">${report.reported_by}</td>
-              <td class="p-2">${report.reason}</td>
-              <td class="p-2">${new Date(report.timestamp).toLocaleString()}</td>
+              <td class="p-2 text-xs">${r.report_id}</td>
+              <td class="p-2">${r.user_id}</td>
+              <td class="p-2">${r.reported_by}</td>
+              <td class="p-2">${r.reason}</td>
+              <td class="p-2">${r.status || "pending"}</td>
+              <td class="p-2">${r.action_taken || "-"}</td>
+              <td class="p-2">${r.reviewed_by || "-"}</td>
+              <td class="p-2">${r.reviewed_at ? new Date(r.reviewed_at).toLocaleString() : "-"}</td>
               <td class="p-2 text-center">
-                <button onclick="banUser('${report.user_id}')" class="bg-red-600 text-white px-2 py-1 rounded">Ban</button>
+                <button onclick="banUser('${r.user_id}')" class="bg-red-600 text-white px-2 py-1 rounded">Ban</button>
               </td>
             </tr>`;
         });
-      } catch (error) {
+      } catch {
         alert("Failed to load reports.");
       }
     }
